refactor SenderDetails into EmailDetails component and display newly created Sender and Recipient components, begin to add SCSS files and throw in some basic styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
 @import './base/settings';
 @import './base/base';
+@import './components/SearchBar';
+@import './components/Inbox';
+@import './components/EmailDetails';
+@import './components/InboxItem';
