--- a/src/styles/components/_EmailDetails.scss
+++ b/src/styles/components/_EmailDetails.scss
@@ -6,6 +6,7 @@
   width: inherit;
   align-items: center;
   justify-content: center;
+  border: 2px solid black;
 }
 
 @media only screen and (max-width: 768px) {
