--- a/src/styles/components/_Inbox.scss
+++ b/src/styles/components/_Inbox.scss
@@ -2,6 +2,7 @@
   height: 90vh;
   overflow-y: scroll;
   width: inherit;
+  border: 2px solid black;
 }
 
 @media only screen and (max-width: 768px) {
