finish responsive styling, add tests for each action

--- a/src/styles/components/_EmailDashboard.scss
+++ b/src/styles/components/_EmailDashboard.scss
@@ -1,3 +1,8 @@
-.left-col, .right-col {
-  padding: 0px !important;
+.main-content {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.right-col, .left-col {
+  padding: 0px;
 }
