--- a/src/styles/components/_Inbox.scss
+++ b/src/styles/components/_Inbox.scss
@@ -5,9 +5,9 @@
   border: 2px solid black;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
     /* For mobile phones: */
-    .email-details {
-        height: 60vh;
+    .inbox {
+        height: 50vh;
     }
 }
