--- a/src/styles/components/_InboxItem.scss
+++ b/src/styles/components/_InboxItem.scss
@@ -17,3 +17,15 @@
   font-size: 100%;
   font-family: 'PT Sans Narrow', sans-serif;
 }
+
+
+@media only screen and (max-width: 767px) {
+    /* For mobile phones: */
+    .email-__subject {
+        font-size: 70%;
+    }
+
+    .email__body {
+      font-size: 70%;
+    }
+}
