--- a/src/styles/components/_SenderOrRecipient.scss
+++ b/src/styles/components/_SenderOrRecipient.scss
@@ -2,10 +2,11 @@
   text-align: center;
   width: auto;
   height: auto;
-  &.sender {
-    margin-bottom: 15px;
-    border-bottom: 2px solid black;
-  }
+}
+
+.sender {
+  margin-bottom: 15px;
+  border-bottom: 2px solid black;
 }
 
 .sender-recipient__from-to {
@@ -42,6 +43,10 @@
   border: 1px solid #9F9F9F;
 }
 
+.sender-recipient__company-container {
+  padding: 5px;
+}
+
 .sender-recipient__company-logo {
   height: auto;
   width: 80px;
@@ -50,4 +55,35 @@
 
 .details-line-break {
   width: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+  /* For mobile phones: */
+  .sender {
+    margin-bottom: 5px;
+  }
+
+  .sender-recipient__from-to {
+    font-size: 100%
+  }
+
+  .sender-recipient__name, .sender-recipient__company-name {
+    font-size: 90%;
+  }
+
+  .sender-recipient__email-description {
+    font-size: 12px;
+    margin-bottom: 0px;
+  }
+
+  .sender-recipient__image {
+    height: 40px;
+    width: 40px;
+  }
+
+  .sender-recipient__company-logo {
+    width: 40px;
+  }
+
+
 }
